--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/4845445736.js" crossorigin="anonymous"></script>
-	<script src="style.css" crossorigin="anonymous"></script>
+	<script src="app.js" crossorigin="anonymous"></script>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
