--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	</header>
 	<nav>
 		<ul class="gnav-navi-1">
-			<li><a href="#"><p class="pink"><i class="icon fa-solid fa-house fa-2x"></i></p>MyAccount</a></li>
-			<li><a href="#"><p class="pink"><i class="icon fa-regular fa-envelope fa-2x"></i></p>メッセージ</a></li>
-			<li><a href="#"><p class="pink"><i class="icon fa-solid fa-gear fa-2x"></i></p>設定</a></li>
-			<li><a href="#"><p class="pink"><i class="icon fa-regular fa-circle-question fa-2x"></i></p>FAQ</a></li>
-			<li><a href="#"><p class="pink"><i class="icon fa-solid fa-rectangle-list fa-2x"></i></p>サービス一覧</a></li>
+			<li><a href="#"><i class="icon fa-solid fa-house fa-2x"></i><p class="navi-name">MyAccount</p></a></li>
+			<li><a href="#"><i class="icon fa-regular fa-envelope fa-2x"></i><p class="navi-name">メッセージ</p></a></li>
+			<li><a href="#"><i class="icon fa-solid fa-gear fa-2x"></i><p class="navi-name">設定</p></a></li>
+			<li><a href="#"><i class="icon fa-regular fa-circle-question fa-2x"></i><p class="navi-name">FAQ</p></a></li>
+			<li><a href="#"><i class="icon fa-solid fa-rectangle-list fa-2x"></i><p class="navi-name">サービス一覧</p></a></li>
 		</ul>
 	</nav>
 	<main>
@@ -88,7 +88,7 @@
 						株式会社　ブルーオレンジ
 					</td>
 					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+						<a href="details.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
 				</tr>
 				<tr class="list">
 					<th class="left-list left date">10/04</th>
@@ -261,6 +261,447 @@
 					<td style="text-align:right" colspan="1">
 						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
 				</tr>
+				<tr>
+					<td style="text-align:left" colspan="3" class="month">
+						2022年06月
+					</td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">06/27</th>
+					<th class="middle-list activity">-18,693</th>
+					<th class="right-list right balance">256,460</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						楽天カードサービス　株式会社
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">06/27</th>
+					<th class="middle-list activity">-45,330</th>
+					<th class="right-list right balance">275,153</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						岡田　真澄
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr>
+					<td style="text-align:left" colspan="3" class="month">
+						2022年05月
+					</td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">05/31</th>
+					<th class="middle-list activity">-50,000</th>
+					<th class="right-list right balance">320,483</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						カード出金　セブン銀行
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">05/27</th>
+					<th class="middle-list activity">-20,596</th>
+					<th class="right-list right balance">375,483</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						楽天カードサービス　株式会社
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">05/20</th>
+					<th class="middle-list activity">67,400</th>
+					<th class="right-list right balance">396,079</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						レスター建装原ジョスアレスター
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">05/10</th>
+					<th class="middle-list activity">-18,000</th>
+					<th class="right-list right balance">328,679</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						株式会社　アイズホーム
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">05/06</th>
+					<th class="middle-list activity">161,000</th>
+					<th class="right-list right balance">508,679</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						レスター建装原ジョスアレスター
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr>
+					<td style="text-align:left" colspan="3" class="month">
+						2022年04月
+					</td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">04/28</th>
+					<th class="middle-list activity">-85,000</th>
+					<th class="right-list right balance">347,679</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						カード出金　セブン銀行
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">04/27</th>
+					<th class="middle-list activity">-19,023</th>
+					<th class="right-list right balance">432,679</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						楽天カードサービス　株式会社
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">04/27</th>
+					<th class="middle-list activity">-60,330</th>
+					<th class="right-list right balance">451,702</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						株式会社　ＣＳＡ不動産
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">04/01</th>
+					<th class="middle-list activity">-55,000</th>
+					<th class="right-list right balance">512,032</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						カード出金　セブン銀行
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr>
+					<td style="text-align:left" colspan="3" class="month">
+						2022年03月
+					</td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">03/27</th>
+					<th class="middle-list activity">-22,054</th>
+					<th class="right-list right balance">567,032</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						楽天カードサービス　株式会社
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">03/27</th>
+					<th class="middle-list activity">-60,330</th>
+					<th class="right-list right balance">589,086</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						株式会社　ＣＳＡ不動産
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">03/18</th>
+					<th class="middle-list activity">161,000</th>
+					<th class="right-list right balance">649,416</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						レスター建装原ジョスアレスター
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">03/03</th>
+					<th class="middle-list activity">-45,000</th>
+					<th class="right-list right balance">488,416</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						カード出金　セブン銀行
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr>
+					<td style="text-align:left" colspan="3" class="month">
+						2022年02月
+					</td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">02/27</th>
+					<th class="middle-list activity">-21,379</th>
+					<th class="right-list right balance">533,416</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						楽天カードサービス　株式会社
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">02/27</th>
+					<th class="middle-list activity">-60,330</th>
+					<th class="right-list right balance">554,795</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						株式会社　ＣＳＡ不動産
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">02/18</th>
+					<th class="middle-list activity">137,600</th>
+					<th class="right-list right balance">615,125</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						レスター建装原ジョスアレスター
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">02/01</th>
+					<th class="middle-list activity">-50,000</th>
+					<th class="right-list right balance">477,525</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						カード出金　セブン銀行
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr>
+					<td style="text-align:left" colspan="3" class="month">
+						2022年01月
+					</td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">01/27</th>
+					<th class="middle-list activity">-20,252</th>
+					<th class="right-list right balance">527,525</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						楽天カードサービス　株式会社
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">01/27</th>
+					<th class="middle-list activity">-60,330</th>
+					<th class="right-list right balance">547,777</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						株式会社　ＣＳＡ不動産
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">01/20</th>
+					<th class="middle-list activity">161,000</th>
+					<th class="right-list right balance">608,107</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						レスター建装原ジョスアレスター
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">01/05</th>
+					<th class="middle-list activity">-90,000</th>
+					<th class="right-list right balance">447,107</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						カード出金　セブン銀行
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr>
+					<td style="text-align:left" colspan="3" class="month">
+						2021年12月
+					</td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">12/27</th>
+					<th class="middle-list activity">-18,185</th>
+					<th class="right-list right balance">537,107</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						楽天カードサービス　株式会社
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">12/27</th>
+					<th class="middle-list activity">-60,330</th>
+					<th class="right-list right balance">555,292</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						株式会社　ＣＳＡ不動産
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">12/20</th>
+					<th class="middle-list activity">149,300</th>
+					<th class="right-list right balance">615,622</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						レスター建装原ジョスアレスター
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">12/03</th>
+					<th class="middle-list activity">-50,000</th>
+					<th class="right-list right balance">466,322</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						カード出金　セブン銀行
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr>
+					<td style="text-align:left" colspan="3" class="month">
+						2021年11月
+					</td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">11/27</th>
+					<th class="middle-list activity">-16,401</th>
+					<th class="right-list right balance">516,322</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						楽天カードサービス　株式会社
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">11/27</th>
+					<th class="middle-list activity">-60,330</th>
+					<th class="right-list right balance">532,723</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						株式会社　ＣＳＡ不動産
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">11/19</th>
+					<th class="middle-list activity">149,300</th>
+					<th class="right-list right balance">593,053</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						レスター建装原ジョスアレスター
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">11/02</th>
+					<th class="middle-list activity">-50,000</th>
+					<th class="right-list right balance">443,753</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						カード出金　セブン銀行
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr>
+					<td style="text-align:left" colspan="3" class="month">
+						2021年10月
+					</td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">10/27</th>
+					<th class="middle-list activity">-14,035</th>
+					<th class="right-list right balance">493,753</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						楽天カードサービス　株式会社
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">10/27</th>
+					<th class="middle-list activity">-60,330</th>
+					<th class="right-list right balance">507,788</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						株式会社　ＣＳＡ不動産
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
 		</table>
 		<div class="chevron">
 			<a href="#" class="pages page-left-chevron"><i class="fa-solid fa-chevron-left fa-lg"></i></a>
@@ -280,6 +721,5 @@
 		<p class="info">加入協会</p>
 		<p class="info">日本証券業協会、一般社団法人金融先物取引業協会</p>
 	</footer>
-	
 </body>
 </html>
