--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	</header>
 	<nav>
 		<ul class="gnav-navi-1">
-			<li><a href="#"><i class="icon fa-solid fa-house fa-2x"></i><p class="navi-name">MyAccount</p></a></li>
-			<li><a href="#"><i class="icon fa-regular fa-envelope fa-2x"></i><p class="navi-name">メッセージ</p></a></li>
-			<li><a href="#"><i class="icon fa-solid fa-gear fa-2x"></i><p class="navi-name">設定</p></a></li>
-			<li><a href="#"><i class="icon fa-regular fa-circle-question fa-2x"></i><p class="navi-name">FAQ</p></a></li>
-			<li><a href="#"><i class="icon fa-solid fa-rectangle-list fa-2x"></i><p class="navi-name">サービス一覧</p></a></li>
+			<li ><a href="#"><i class="icon fa-solid fa-house fa-2x"></i><p class="navi-name">MyAccount</p></a></li>
+			<li ><a href="#"><i class="icon fa-regular fa-envelope fa-2x"></i><p class="navi-name">メッセージ</p></a></li>
+			<li ><a href="#"><i class="icon fa-solid fa-gear fa-2x"></i><p class="navi-name">設定</p></a></li>
+			<li ><a href="#"><i class="icon fa-regular fa-circle-question fa-2x"></i><p class="navi-name">FAQ</p></a></li>
+			<li ><a href="#"><i class="icon fa-solid fa-rectangle-list fa-2x"></i><p class="navi-name">サービス</p></a></li>
 		</ul>
 	</nav>
 	<main>
@@ -43,9 +43,9 @@
 					</td>
 				</tr>
 				<tr class="list">
-					<th class="left-list left date">10/31</th>
-					<th class="middle-list activity">-80,000</th>
-					<th class="right-list right balance">857,771</th>
+					<th id="payment_date" class="left-list left date">10/31</th>
+					<th id="payment_amount" class="middle-list activity">-80,000</th>
+					<th id="total_amount" class="right-list right balance">857,771</th>
 				</tr>
 				<tr class="details">
 					<td style="text-align:left" colspan="2">
@@ -88,7 +88,7 @@
 						株式会社　ブルーオレンジ
 					</td>
 					<td style="text-align:right" colspan="1">
-						<a href="details.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
+						<a href="52.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
 				</tr>
 				<tr class="list">
 					<th class="left-list left date">10/04</th>
@@ -141,7 +141,7 @@
 						株式会社　ブルーオレンジ
 					</td>
 					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+						<a href="48.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
 				</tr>
 				<tr class="list">
 					<th class="left-list left date">09/02</th>
@@ -194,7 +194,7 @@
 						株式会社　ブルーオレンジ
 					</td>
 					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+						<a href="44.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
 				</tr>
 				<tr class="list">
 					<th class="left-list left date">08/01</th>
@@ -247,7 +247,7 @@
 						株式会社　ブルーオレンジ
 					</td>
 					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+						<a href="40.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
 				</tr>
 				<tr class="list">
 					<th class="left-list left date">07/04</th>
@@ -329,7 +329,7 @@
 						レスター建装原ジョスアレスター
 					</td>
 					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+						<a href="34.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
 				</tr>
 				<tr class="list">
 					<th class="left-list left date">05/10</th>
@@ -353,7 +353,7 @@
 						レスター建装原ジョスアレスター
 					</td>
 					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+						<a href="32.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
 				</tr>
 				<tr>
 					<td style="text-align:left" colspan="3" class="month">
@@ -447,7 +447,7 @@
 						レスター建装原ジョスアレスター
 					</td>
 					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+						<a href="25.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
 				</tr>
 				<tr class="list">
 					<th class="left-list left date">03/03</th>
@@ -500,7 +500,7 @@
 						レスター建装原ジョスアレスター
 					</td>
 					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+						<a href="21.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
 				</tr>
 				<tr class="list">
 					<th class="left-list left date">02/01</th>
@@ -553,7 +553,7 @@
 						レスター建装原ジョスアレスター
 					</td>
 					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+						<a href="17.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
 				</tr>
 				<tr class="list">
 					<th class="left-list left date">01/05</th>
@@ -606,7 +606,7 @@
 						レスター建装原ジョスアレスター
 					</td>
 					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+						<a href="13.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
 				</tr>
 				<tr class="list">
 					<th class="left-list left date">12/03</th>
@@ -659,7 +659,7 @@
 						レスター建装原ジョスアレスター
 					</td>
 					<td style="text-align:right" colspan="1">
-						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+						<a href="09.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
 				</tr>
 				<tr class="list">
 					<th class="left-list left date">11/02</th>
@@ -703,10 +703,7 @@
 						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
 				</tr>
 		</table>
-		<div class="chevron">
-			<a href="#" class="pages page-left-chevron"><i class="fa-solid fa-chevron-left fa-lg"></i></a>
-			<a href="#" class="pages page-right-chevron"><i class="fa-solid fa-chevron-right fa-lg"></i></a>
-		</div>
+
 		<div class="attention">
 			<p>※最新の明細から順に最大50件（24ヶ月以内）の出入金明細を表示しています。</p>
 			<p>※PCサイトでは、ログイン後の「入出金明細」画面にて、最新50件（24ヶ月以内）の他に、CSV形式またはPDF形式でダウンロードすることで、「口座開設日」から「ダウンロード依頼をした日の前日」までの入出金明細をご確認いただけます。ダウンロード方法は<a href="#">こちら</a>をご確認ください。</p>
