--- a/13.html
+++ b/13.html
@@ -18,7 +18,7 @@
 	<nav>
 		<ul class="gnav-navi-1">
 			<li><a href="#"><i class="icon fa-solid fa-house fa-2x"></i><p class="navi-name">MyAccount</p></a></li>
-			<li><a href="#"><i class="icon fa-regular fa-envelope fa-2x"></i><p class="navi-name">メッセージ</p></a></li>
+			<li><a href="#"><i class="icon fa-regular fa-envelope fa-2x"></i><p class="navi-name">メール</p></a></li>
 			<li><a href="#"><i class="icon fa-solid fa-gear fa-2x"></i><p class="navi-name">設定</p></a></li>
 			<li><a href="#"><i class="icon fa-regular fa-circle-question fa-2x"></i><p class="navi-name">FAQ</p></a></li>
 			<li><a href="#"><i class="icon fa-solid fa-rectangle-list fa-2x"></i><p class="navi-name">サービス</p></a></li>
