--- a/index.html
+++ b/index.html
@@ -37,6 +37,73 @@
 					<th class="center activity-title">入出金(円)</th>
 					<th class="right balance-title">残高(円)</th>
 				</tr>
+			<tr>
+					<td style="text-align:left" colspan="3" class="month">
+						2022年11月
+					</td>
+				</tr>
+				<tr class="list">
+					<th id="payment_date" class="left-list left date">11/30</th>
+					<th id="payment_amount" class="middle-list activity">-50,000</th>
+					<th id="total_amount" class="right-list right balance">888,071</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						カード出金　セブン銀行
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">11/28</th>
+					<th class="middle-list activity">-103,258</th>
+					<th class="right-list right balance">938,071</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						楽天カードサービス　株式会社
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">11/28</th>
+					<th class="middle-list activity">-45,330</th>
+					<th class="right-list right balance">1,041,329</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						岡田　真澄
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">11/18</th>
+					<th class="middle-list activity">328,888</th>
+					<th class="right-list right balance">1,086,659</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						株式会社　ブルーオレンジ
+					</td>
+					<td style="text-align:right" colspan="1">
+						<a href="52.html"><i class="details-chevron fa-solid fa-chevron-right"></i></a></td>
+				</tr>
+				<tr class="list">
+					<th class="left-list left date">11/02</th>
+					<th class="middle-list activity">-100,000</th>
+					<th class="right-list right balance">757,771</th>
+				</tr>
+				<tr class="details">
+					<td style="text-align:left" colspan="2">
+						カード出金　セブン銀行
+					</td>
+					<td style="text-align:right" colspan="1">
+						<i class="details-chevron fa-solid fa-chevron-right"></i></td>
+				</tr>
+				<tr>
+					<td style="text-align:left" colspan="3" class="month">
 				<tr>
 					<td style="text-align:left" colspan="3" class="month">
 						2022年10月
